objects/POP__c.object
<CustomObject>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Rete__c</fullName>
        <label>Rete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Zona__c</fullName>
        <label>Zona</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>POP</label>
    <nameField>
        <label>POP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>